fix: horizontal scroll on content sections
due to width being too wide for container

--- a/src/styles/layouts/content.scss
+++ b/src/styles/layouts/content.scss
@@ -1,7 +1,7 @@
 @mixin content {
   margin: 0 40px;
   color: $white;
+  width: calc(100% - 80px);
   display: block;
-  width: 100%;
   padding: 0 20px;
 }
